--- a/VeloApp/composer.json
+++ b/VeloApp/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "symfony/debug": "^3.4"
+        "symfony/debug": "^3.4",
+        "altorouter/altorouter": "^1.2"
     },
     "require-dev": {
         "symfony/var-dumper": "^3.4"
